--- a/common/package.json
+++ b/common/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@tanviirsinghh/medium-common",
-  "version": "2.0.1",
+  "version": "3.0.3",
   "description": "",
   "main": "dist/index.js",
-  "type":"module",
-  "scripts": {
+ "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +12,8 @@
   "dependencies": {
     "otplib": "^12.0.1",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0"
   }
 }
